# LetsCreateDoc

./: .gitignore  sample_structure.csv
.agents/workflows/: backend-good-practices.md  frontend-workflo.md
.agents/workflows/skills/python-fastapi/: SKILL.md
backend/: .env.example  alembic.ini  forge.db  main.py  pyproject.toml  requirements.txt  test_borders.docx  test_borders.py  test_regex.py  test_styles.py
backend/src/config/: settings.py
backend/src/database/: db.py  models.py  repository.py
backend/src/database/migrations/: env.py
backend/src/database/migrations/versions/: 1a04de6a561d_add_project_status_column.py  33e8f8167a91_add_theme_color_to_projects.py  89d8db4feb3f_create_initial_tables.py  a8079a78a8b8_initial_schema.py  cb922c2a0181_add_plan_column_to_projects.py  cc97d99019d2_remove_unique_title.py
backend/src/features/documentation/: agent.py  prompts.py  router.py  sdk_agent.py  service.py  toolkit.py
backend/src/tmp/: test_diagram.py  test_regex2.py  test_regex3.py  test_regex4.py
backend/src/utils/: CustomAI.py  docx_generator.py  logger.py  rate_limiter.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: MarkdownRenderer.tsx
frontend/src/components/ui/: Button.tsx  Textarea.tsx
frontend/src/features/documentation/components/: DocumentationForm.tsx  GenerationStatus.tsx  ProjectHistory.tsx
frontend/src/services/: documentationService.ts
frontend/src/styles/: globals.css
